--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -36,7 +36,7 @@
           <div class="links">
             <ul class="push">
               <li><a class="link" routerLink="/">Про нас</a></li>
-              <li><a class="link" routerLink="/import">Імпорт</a></li>
+              <li><a class="link" routerLink="/import-page">Імпорт</a></li>
               <li><a class="link" routerLink="/contacts">Зворотній зв'язок</a></li>
               <li><a class="link" routerLink="/shop" >Магазин</a></li>
             </ul>
