--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,7 +26,7 @@
           <button class="btn btn-outline-light btn-lg common-btn"
                   data-toggle="collapse"
                   data-target=".navbar-collapse.show"
-                  routerLink="/import" ><fa-icon [icon]="['fas', 'globe']"></fa-icon> Імпорт</button>
+                  routerLink="/import-page" ><fa-icon [icon]="['fas', 'globe']"></fa-icon> Імпорт</button>
         </li>
         <li class="nav-item ">
           <button class="btn btn-outline-light btn-lg common-btn"
