--- a/src/app/main-content/basket/basket.component.html
+++ b/src/app/main-content/basket/basket.component.html
@@ -25,7 +25,7 @@
      Ціна замовлення: {{totalPrice}} ₴
     </div>
     <div class="col-12 d-flex justify-content-center">
-      <button class="btn btn-primary btn-checkout" routerLink="/checkout" >Оформити замовлення</button>
+      <button class="btn btn-primary btn-checkout" routerLink="/order-checkout" >Оформити замовлення</button>
     </div>
     <div class="col-12 d-flex justify-content-center mt-3">
       <button class="btn btn-danger btn-remove-all" (click)="removeAll()">Очистити кошик</button>
